package es.uniovi.dlp.ast;

public interface ASTNode {
}
