package es.uniovi.dlp.ast.expressions;

public interface Expressions {
}
