package es.uniovi.dlp.ast.program;

public interface Definitions {
}
