package es.uniovi.dlp.ast.program;

public class FuncDefinition {
}
