package es.uniovi.dlp.ast.statements;

public class Assignment {
}
