package es.uniovi.dlp.ast.types;

public class FuncType {
}
