@startuml AST

interface ASTNode
interface Statement
class Program
interface Definition
interface Expression
interface Type
class RecordField


' Definitions
class VarDefinition
class FuncDefinition

' Types
class Int
class Void
class Char
class Double
class Array
class RecordType
class FuncType

' Statements
class Assignment
class IfElse
class Return
class In
class Put
class While

' Expressions
class Cast
class UnitaryMinus
class Arithmetic
class Logic
class Relational
class Negation
class ArrayAccess
class Variable
class As

'Main Relations
Program --|> ASTNode
Program *-- Definition
Definition <|-- FuncDefinition
Definition <|-- VarDefinition



'Relation to Type
Type <|-- Int
Type <|-- Void
Type <|-- Char
Type <|-- Double
Type <|-- Array
Type <|-- RecordType
Type <|-- FuncType
Type --* RecordField
RecordField --|> VarDefinition

'Relation of Type
Type <-- VarDefinition
Type --* Definition

' Relations of Statement
Statement --o FuncDefinition
Statement --o VarDefinition

' Relations to Statement
Statement <|-- Return
Statement <|-- IfElse
Statement <|--  Assignment
Statement <|--  Put
Statement <|--  In
Statement <|--  While
Statement <|--  Return
Statement <|--  VarDefinition

' Relations of Expression
Expression --o IfElse
Expression --o Assignment
Expression --o Put
Expression --o In
Expression --o While
Expression --o Return

' Relations to Expression
Expression <|-- Cast
Expression <|-- UnitaryMinus
Expression <|-- Arithmetic
Expression <|-- Logic
Expression <|-- Relational
Expression <|-- Negation
Expression <|-- ArrayAccess
Expression <|-- Variable
Expression <|-- As
@enduml
